# seegnature_ECML26

./: LICENSE  README.md  pyproject.toml
data/raw_numpy/sub-28896-avg/: sub-28896-labels.npy
data/raw_numpy/sub-28896-rest/: sub-28896-channel_coords.npy  sub-28896-channel_names.npy  sub-28896-labels.npy
notebooks/: Graphs.ipynb  basic_ML.ipynb  comparison_and_hyperparameters.ipynb  graph_stability_study.ipynb  loso_study.ipynb
results/clr/: aug_comparison.parquet  norm_comparison.parquet  penalty_comparison.parquet
results/mnd/: aug_comparison.parquet  norm_comparison.parquet  penalty_comparison.parquet
scripts/clr_evaluation/: clr_others.py  clr_siglr_aug_comparison.py  clr_siglr_norm_comparison.py  clr_siglr_penalty_comparison.py
scripts/misc/: raw_numpy_conversion.py
scripts/mnd_evaluation/: mnd_others.py  mnd_siglr_aug_comparison.py  mnd_siglr_norm_comparison.py  mnd_siglr_penalty_comparison.py
src/seegnature/evaluation/: __init__.py  batch_evaluation.py  evaluate_model.py  evaluate_model_with_subject_dict.py  evaluate_models.py  evaluate_models_with_subject_dict.py
src/seegnature/models/: __init__.py  siglr.py
src/seegnature/models/concurrents/: __init__.py  atcnet.py  csplda.py  cspsvm.py  eegconformer.py  eegnet.py
src/seegnature/transforms/: __init__.py  normalization.py  resampling.py  signature.py
src/seegnature/utils/: __init__.py  load_results.py  loso_dataset.py  mne_file_to_dataset.py  numpy_to_mne.py  subject_dict_from_files.py
