[project]
name = "seegnature"
version = "0.1.0"
description = "EEG Classification model using rough path signatures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mne>=1.11.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pysiglib>=1.1.1",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
braindecode = [
    "braindecode>=1.3.2",
]
